--- a/UI/package.json
+++ b/UI/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +13,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^9.1.2",
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "jwt-decode": "^4.0.0",
     "tailwindcss": "^3.4.3"
   }
 }
