07-Checkout & Payment Integration (#5)
* 05 APIs Integration

* 06-Authentication

06-Authentication

* Update routes.js

* 06-Authentication

06-Authentication

* Order & Payment Integration

Order & Payment Integration

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,3 +37,7 @@ spring.security.oauth2.client.registration.google.client-name=Google
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+
+
+#Payment Gateway
+stripe.secret=${STRIPE_SECRET}
