Admin panel & other features (#6)
Admin panel & other features

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -41,3 +41,8 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 
 #Payment Gateway
 stripe.secret=${STRIPE_SECRET}
+
+#FileUpload
+FILE_ZONE=${FILE_ZONE}
+FILE_UPLOAD_API_KEY=${CDN_KEY}
+FILE_UPLOAD_HOST_URL=${CDN_HOST}
