--- a/UI/package.json
+++ b/UI/package.json
@@ -11,8 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "ra-data-simple-rest": "^5.3.0",
     "react": "^18.2.0",
+    "react-admin": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.1",
     "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
     "react-range-slider-input": "^3.0.7",
